--- a/standard_signals.ipynb
+++ b/standard_signals.ipynb
@@ -81,7 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10fb857b8>"
+       "<matplotlib.figure.Figure at 0x113ce6630>"
       ]
      },
      "metadata": {},
@@ -90,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "247f5dc2550d4ca08a644cce6ac6d83a",
+       "model_id": "8fdb59e7c2da49f698d0be6ef2ac3c8b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -316,7 +316,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "step = sym.Heaviside(t)\n",
@@ -326,7 +328,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sym.plot(step, (t, -2, 2), ylim=[-0.2, 1.2], ylabel=r'$\\epsilon(t)$');"
@@ -346,7 +350,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = sym.cos(omega*t) * sym.Heaviside(t)\n",
@@ -399,7 +405,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sym.plot(rect(t), (t, -1, 1), ylim=[-0.2, 1.2], ylabel=r'rect$(t)$');"
@@ -451,7 +459,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sgn = sym.sign(t)\n",
@@ -461,7 +471,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sym.plot(sgn, (t, -2, 2), ylim=[-1.2, 1.2], ylabel=r'sgn$(t)$');"
