--- a/puissance_correlation.ipynb
+++ b/puissance_correlation.ipynb
@@ -62,7 +62,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import scipy.integrate\n",
