--- a/Convolution.ipynb
+++ b/Convolution.ipynb
@@ -21,7 +21,24 @@
     "(f_1*f_2)(t) = \\int_{-\\infty}^{\\infty}f_1(\\tau)f_2(t-\\tau)d\\tau.\n",
     "$$\n",
     "\n",
-    "So, the convolution of two function is the integral over the product of both functions, where one function is time-shifted and flipped in time. Let us not think about why this operation makes sense for now. Instead, let's define two functions $f_1(t)$ and $f_2(t)$:"
+    "So, the convolution of two function is the integral over the product of both functions, where one function is time-shifted and flipped in time. \n",
+    "\n",
+    "## Relation with the (inter-)correlation function ##\n",
+    "\n",
+    "You can prove in a rather simple way that $R_{xy}(\\tau) = x(\\tau) \\ast y^*(-\\tau)$\n",
+    "\n",
+    "Indeed :\n",
+    "\n",
+    "$$ \\begin{array}{rcl}\n",
+    "R_{xy}(\\tau) & = & \\displaystyle \\int_{-\\infty}^\\infty x(t) y^*(t-\\tau) dt \\\\\n",
+    "  & = & \\displaystyle \\int_{-\\infty}^\\infty x(t) y^*(-(\\tau-t)) dt \\\\\n",
+    "  & = & x(\\tau) \\ast y^*(-\\tau).\n",
+    "\\end{array}$$\n",
+    "\n",
+    "\n",
+    "## Example\n",
+    "\n",
+    "Let us not think about why this operation makes sense for now. Instead, let's define two functions $f_1(t)$ and $f_2(t)$:"
    ]
   },
   {
