--- a/puissance_correlation.ipynb
+++ b/puissance_correlation.ipynb
@@ -48,13 +48,13 @@
     "\n",
     "La fonction d'autocorrélation d'un signal d'énergie $x(t)$ est définie par :\n",
     "\n",
-    "$$\\mbox{R}_x(\\tau) = \\int_{t=-\\infty}^{\\infty} x(t) x^*(t-\\tau) dt$$\n",
+    "$$\\mbox{R}_{xx}(\\tau) = \\int_{t=-\\infty}^{\\infty} x(t) x^*(t-\\tau) dt$$\n",
     "\n",
     "On note que $\\mbox{R}_x(0) = \\mbox{E}$.\n",
     "\n",
     "Dans le cas d'un signal de puissance, l'intégrale précédente diverge et on définit :\n",
     "\n",
-    "$$\\mbox{R}_x(\\tau) = \\lim_{T \\rightarrow \\infty} \\frac{1}{T} \\int_{-T/2}^{T/2} x(t) x^*(t-\\tau) dt$$\n",
+    "$$\\mbox{R}_{xx}(\\tau) = \\lim_{T \\rightarrow \\infty} \\frac{1}{T} \\int_{-T/2}^{T/2} x(t) x^*(t-\\tau) dt$$\n",
     "\n",
     "On note que $\\mbox{R}_x(0) = \\mbox{P}$."
    ]
@@ -202,17 +202,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Propriétés de la fonction d'autocorrélation\n",
+    "\n",
+    "<ol>\n",
+    "<li> ** La fonction d'autocorrélation a une symétrie Hermitienne** <br> <br>\n",
+    "\n",
+    "De par la définition, on a directement que :\n",
+    " $$R_{xx}(\\tau) = R_{xx}^*(-\\tau)$$\n",
+    " \n",
+    " Dans le cas de signaux réels on a une symétrie pure et simple : \n",
+    " $$R_{xx}(\\tau) = R_{xx}(-\\tau)$$\n",
+    "</li>\n",
+    "\n",
+    "En particulier, pour un signal non nul :\n",
+    "\n",
+    "<li> ** $\\mathbf{R_{xx}(0) > 0}$** <br><br>\n",
+    "Cette propriété indique que l'énergie et/ou la puissance sont positives.\n",
+    "\n",
+    "</li>\n",
+    "<li> ** Inégalité de Schwartz ** <br><br>\n",
+    "\n",
+    "On peut définir la corrélation entre $x(t)$ et $y(t)$ comme étant un produit scalaire $\\displaystyle <x,y_\\tau> = \\int_{-\\infty}^{\\infty} x(t) y(t-\\tau) dt$.\n",
+    "\n",
+    "\n",
+    "Alors, l'inégalité de Schwartz nous indique que $$|<x,y_\\tau>|^2 \\qquad \\leq \\qquad<x,x> . <y_\\tau,y_\\tau>,$$ donc :\n",
+    "\n",
+    "$$|R_{xy}(\\tau)|^2 \\leq R_{xx}(0) R_{yy}(0).$$\n",
+    "\n",
+    "En particulier :\n",
+    "\n",
+    "$$|R_{xx}(\\tau)| \\leq R_{xx}(0).$$\n",
+    "\n",
+    "<br>\n",
+    "et donc, dans le cas réel $R_{xx}(0)$ ** est la valeur maximale de la fonction d'autocorrélation **\n",
+    "\n",
+    "\n",
+    "</li>\n",
+    "\n",
+    "\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Fonction d'intercorrélation\n",
     "\n",
     "La fonction d'intercorrélation de deux signaux d'énergie $x(t)$ et $y(t)$ est définie par :\n",
     "\n",
-    "$$\\mbox{R}_x(\\tau) = \\int_{t=-\\infty}^{\\infty} x(t) y^*(t-\\tau) dt$$\n",
+    "$$\\mbox{R}_{xy}(\\tau) = \\int_{t=-\\infty}^{\\infty} x(t) y^*(t-\\tau) dt$$\n",
     "\n",
     "\n",
     "\n",
     "Dans le cas de signaux de puissance, l'intégrale précédente diverge et on définit :\n",
     "\n",
-    "$$\\mbox{R}_x(\\tau) = \\lim_{T \\rightarrow \\infty} \\frac{1}{T} \\int_{-T/2}^{T/2} x(t) y^*(t-\\tau) dt$$\n",
+    "$$\\mbox{R}_{xy}(\\tau) = \\lim_{T \\rightarrow \\infty} \\frac{1}{T} \\int_{-T/2}^{T/2} x(t) y^*(t-\\tau) dt$$\n",
     "\n",
     "### Exemple d'intercorrélation entre un signal triangulaire et un signal rectangulaire\n",
     "\n",
