--- a/standard_signals.ipynb
+++ b/standard_signals.ipynb
@@ -21,7 +21,7 @@
     "x(t) = e^{s t} \n",
     "\\end{equation}\n",
     "\n",
-    "où  $s = \\sigma + \\imath \\omega$ avec $t, \\sigma, \\omega \\in \\mathbb{R}$ où $t$ représente généralement le temps et $\\imath = \\sqrt{-1}$. La variable $\\sigma$ peut être interprétée comme étant un amortissement et $\\omega$ comme étant la pulsation de l'exponentielle complexe (on reviendra sur cette notion dans la partie numéirque).  En utilisant la [formule d'Euler](https://fr.wikipedia.org/wiki/Formule_d%27Euler), on peut réécrire $x(t)$ : \n",
+    "où  $s = \\sigma + \\imath \\omega$ avec $t, \\sigma, \\omega \\in \\mathbb{R}$ où $t$ représente généralement le temps et $\\imath = \\sqrt{-1}$. La variable $\\sigma$ peut être interprétée comme étant un amortissement et $\\omega$ comme étant la pulsation de l'exponentielle complexe (on reviendra sur cette notion dans la partie numérique).  En utilisant la [formule d'Euler](https://fr.wikipedia.org/wiki/Formule_d%27Euler), on peut réécrire $x(t)$ : \n",
     "\n",
     "\\begin{equation}\n",
     "x(t) = e^{(\\sigma + \\imath \\omega) t} = e^{\\sigma t} [\\cos(\\omega t) + \\imath  \\sin(\\omega t)]\n",
@@ -65,28 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x10df906d8>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "595999d2a9fc4ad19e6d74f7938565cc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
+       "model_id": "9b542c44a9984df78685848f518bcb03"
+      }
      },
      "metadata": {},
      "output_type": "display_data"
@@ -97,9 +83,27 @@
        "<function __main__.<lambda>>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1186bb7b8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x11992e390>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -117,6 +121,7 @@
     "    plt.ylabel(r'$e^{\\sigma t} \\sin(\\omega t)$')\n",
     "    plt.plot(t, real_expo(sigma,t)*np.imag(complex_sin(omega,t)))\n",
     "    plt.show()\n",
+    "\n",
     "    \n",
     "plt.figure()\n",
     "interact(lambda sigma,omega: ShowCplxExp(real_expo,complex_sin,t,sigma,omega),sigma=(-0.5,0.5,0.1),omega=(0,10,0.1))\n"
@@ -128,7 +133,7 @@
    "source": [
     "### La distribution de Dirac\n",
     "\n",
-    "La [distribution de Dirac](https://fr.wikipedia.org/wiki/Distribution_de_Dirac) (parfois appelée fonction $\\delta(t)$ de Dirac, ou impulsion de Dirac), joue un rôle fondamental dans la description des sysètme LTI, en particulier pour le passage des systèmes à temps continu vers les système à temps discret. Cette distribution peut être considérée comme étant une généralisation d'une fonction, mais sa définition théorique sort du cadre de ce cours.  \n",
+    "La [distribution de Dirac](https://fr.wikipedia.org/wiki/Distribution_de_Dirac) (parfois appelée fonction $\\delta(t)$ de Dirac, ou impulsion de Dirac), joue un rôle fondamental dans la description des système LTI, en particulier pour le passage des systèmes à temps continu vers les système à temps discret. Cette distribution peut être considérée comme étant une généralisation d'une fonction, mais sa définition théorique sort du cadre de ce cours.  \n",
     "\n",
     "On peut considérer que \n",
     "<ol>\n",
@@ -304,7 +309,7 @@
     "\\int_{-\\infty}^{t} \\delta(\\tau) \\; d\\tau = H(t)\n",
     "\\end{equation}\n",
     "\n",
-    "### Notation : $u(t) = H_1(t)$\n",
+    "### Notation : $u(t) = H_0(t)$\n",
     "\n",
     "Pour faciliter la notation (entre autres pour avoir une cohérence dans l'utilisation des majuscules et minuscules), dans ce cours (et dans une grande partie de la litérature), on note $u(t) = H_o(t)$.\n",
     "\n"
@@ -657,28 +662,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x110d8f4a8>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "937370bcd8cc46f28acfd2a57bde3712",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
+       "model_id": "3cfc464c1ffb4f92b3cac57af91c0491"
+      }
      },
      "metadata": {},
      "output_type": "display_data"
@@ -689,7 +680,7 @@
        "<function __main__.<lambda>>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,28 +725,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x1517c19f60>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6578aa0a478f480fb7f17fcdea98c01f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
+       "model_id": "a3ee659f68d54eb8aa75d38f7132b935"
+      }
      },
      "metadata": {},
      "output_type": "display_data"
@@ -766,7 +743,7 @@
        "<function __main__.<lambda>>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +780,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
